changes for run at home